Fix preview overlap by passing max-height to figure include
Pass max-height="160px" to figure.liquid which renders it as an
inline style on the img element, guaranteeing it overrides the
inline width/height attributes. Remove redundant CSS workarounds.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -677,20 +677,6 @@ footer.sticky-bottom {
     li {
       margin-bottom: 2.5rem;
 
-      .abbr {
-        figure {
-          margin: 0;
-
-          picture img {
-            max-height: 160px !important;
-            height: auto !important;
-            width: auto !important;
-            max-width: 100%;
-            object-fit: contain;
-          }
-        }
-      }
-
       .preview {
         width: 100%;
         min-width: 80px;
